[metadata]
name = HashThePlanet
long_description = file: README.md
license = GPL-2.0 license
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
python_requires = >=3.6
packages = find:
install_requires =
    loguru>=0.5.3
    SQLAlchemy>=1.4.22
    GitPython>=3.1.18

[options.entry_points]
console_scripts =
    hashtheplanet = hashtheplanet.core.hashtheplanet:main

[options.packages.find]
exclude =
    tests
